# pyjsviz

./: .gitignore  .pre-commit-config.yaml  README.md  agg functions  development guidlines  echartsm.py  echartsp.py  pyproject.toml  setup.cfg  setup.py  test.ipynb  tox.ini
.github/workflows/: python-app.yml  test.yaml
.pytest_cache/v/cache/: nodeids
app/: LICENSE  setup.py
app/assets/: Template.html  barracetemplate.py  china_cities_GDP.csv  lineracetemplate.py  timelinetemplate.py
app/charts/basic_charts/: bar.py
app/translation/: __init__.py
app/translation/API/: action.py  events.py
app/translation/GL/: areastyle.py  axisline.py  axispointer.py  axistick.py  colormaterial.py  grid3d.py  itemstyle.py  lambertmaterial.py  light.py  linestyle.py  setoption.py  surfaceequation.py  surfaceparametricequation.py  temporalsupersampling.py  viewcontrol.py  yaxis3d.py
app/translation/Options/: angleaxis.py  axisline.py  axispointer.py  brush.py  crossstyle.py  datazoom.py  endlabel.py  graphic.py  indicator.py  itemstyle.py  label.py  labellayout.py  labelline.py  legend.py  linestyle.py  markline.py  minorsplitline.py  minortick.py  name.py  parallel.py  parallelaxis.py  pointer.py  progress.py  radiusaxis.py  selecte.py  series.py  title.py  tooltip.py  yaxis.py
docs/source/: conf.py  index.rst
pyjsviz/: __init__.py
pyjsviz/assets/: template.py
pyjsviz/charts/: __init__.py  timeline.py
pyjsviz/factory/: bar.py
pyjsviz/tests/: conftest.py  pytest.ini  test_math.py
pyjsviz/translation/: __init__.py
pyjsviz/translation/API/: api.py  echarts.py  echartsInstance.py
(+376 files in other folders)
