[metadata]
name = pyjsviz
version = 0.0.1
description = test app
auther = Adel ahmed
author_email="developers@holoviz.org"
license = GPT
license_file = LICENSE
platforms='Windows', 'Linux'
url='http://panel.holoviz.org'
classifiers=
        "License :: OSI Approved :: BSD License"
        "Development Status :: 5 - Production/Stable"
        "Programming Language :: Python :: 3"
        "Programming Language :: Python :: 3.7"
        "Programming Language :: Python :: 3.8"
        "Programming Language :: Python :: 3.9"
        "Programming Language :: Python :: 3.10"
        "Operating System :: OS Independent"
        "Intended Audience :: Developers"
        "Intended Audience :: Science/Research"
        "Intended Audience :: Financial and Insurance Industry"
        "Intended Audience :: Healthcare Industry"
        "Intended Audience :: Information Technology"
        "Intended Audience :: Legal Industry"
        "Intended Audience :: Other Audience"
        "Intended Audience :: Science/Research"
        "Natural Language :: English"
        "Topic :: Scientific/Engineering"
        "Topic :: Scientific/Engineering :: Visualization"
        "Topic :: Scientific/Engineering :: Information Analysis"
        "Topic :: Office/Business"
        "Topic :: Office/Business :: Financial"
        "Topic :: Software Development :: Libraries"

[options]
packages = pyjsviz
install_requires =
    pandas
    pydantic
python_requires = >=3.7
zip_safe = no

[options.package_data]
pyjsviz = py.typed
